--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,6 +15,6 @@ jobs:
             
           - name: Docker build and push
             run: |
-              sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{  secrets.DOCKERHUB_PASSWORD }}
-              sudo docker build -t uriaschaves/app-task:latest .
-              sudo docker push uriaschaves/app-task:latest
+              docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{  secrets.DOCKERHUB_PASSWORD }}
+              docker build -t uriaschaves/app-task:latest .
+              docker push uriaschaves/app-task:latest
