--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,5 +16,5 @@ jobs:
           - name: Docker build and push
             run: |
               docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{  secrets.DOCKERHUB_PASSWORD }}
-              docker build -t uriaschaves/app-task:latest .
-              docker push uriaschaves/app-task:latest
+              docker build -t uriaschaves/app-task1:latest .
+              docker push uriaschaves/app-task1:latest
